--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^0.0.93",
     "vue": "^3.2.38",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/vue-moment": "^4.0.3",
     "@vitejs/plugin-vue": "^3.0.3",
     "vite": "^3.0.9"
   }
